Add document folder contents API
